crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Multiple_starred_exp…_(3fbab22ead236138).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid.md - Tests for invalid types in type expressions - Multiple starred expressions in a `tuple` specialization
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVarTuple, Unpack
 2 | 
 3 | Ts = TypeVarTuple("Ts")
 4 | 
 5 | def f(
 6 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
 8 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 9 |     x2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str, ...]]],
10 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
11 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
12 |     z: tuple[*tuple[int, ...], *tuple[str]],
13 | ):
14 |     reveal_type(x)  # revealed: tuple[int | str, ...]
15 |     reveal_type(x2)  # revealed: tuple[int | str, ...]
16 |     reveal_type(y)  # revealed: tuple[str | int, ...]
17 |     reveal_type(z)  # revealed: tuple[*tuple[int, ...], str]
18 | 
19 | T1 = tuple[int, *Ts, str, *Ts]  # error: [invalid-type-form]
20 | 
21 | def func3(t: tuple[*Ts]):
22 |     t5: tuple[*tuple[str], *Ts]  # OK
23 |     t6: tuple[*tuple[str, ...], *Ts]  # error: [invalid-type-form]
```

# Diagnostics

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
 --> src/mdtest_snippet.py:7:8
  |
5 | def f(
6 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
  |        ^^^^^^----------------^^----------------^
  |              |                 |
  |              |                 Later unpacked variadic tuple
  |              First unpacked variadic tuple
8 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
9 |     x2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str, ...]]],
  |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:9:9
   |
 7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
 8 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 9 |     x2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str, ...]]],
   |         ^^^^^^-----------------------^^-----------------------^
   |               |                        |
   |               |                        Later unpacked variadic tuple
   |               First unpacked variadic tuple
10 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
11 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:10:8
   |
 8 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 9 |     x2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str, ...]]],
10 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
   |        ^^^^^^----------------^^^^^^^^^^^^----------------^
   |              |                           |
   |              |                           Later unpacked variadic tuple
   |              First unpacked variadic tuple
11 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
12 |     z: tuple[*tuple[int, ...], *tuple[str]],
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:19:6
   |
17 |     reveal_type(z)  # revealed: tuple[*tuple[int, ...], str]
18 |
19 | T1 = tuple[int, *Ts, str, *Ts]  # error: [invalid-type-form]
   |      ^^^^^^^^^^^---^^^^^^^---^
   |                 |         |
   |                 |         Later unpacked variadic tuple
   |                 First unpacked variadic tuple
20 |
21 | def func3(t: tuple[*Ts]):
   |
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:23:9
   |
21 | def func3(t: tuple[*Ts]):
22 |     t5: tuple[*tuple[str], *Ts]  # OK
23 |     t6: tuple[*tuple[str, ...], *Ts]  # error: [invalid-type-form]
   |         ^^^^^^----------------^^---^
   |               |                 |
   |               |                 Later unpacked variadic tuple
   |               First unpacked variadic tuple
   |
info: rule `invalid-type-form` is enabled by default

```
